<resources>
    <string name="app_name">Y2S2_assignment2</string>
    <string name="guide_me">Guide me</string>
    <string name="next">Next</string>
    <string name="home">HOME</string>
    <string name="favourites">Favourites</string>
    <string name="visit">Visit</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="select_your_payment_method">Select your payment method</string>
    <string name="year">Year</string>
    <string name="year1">Year</string>
    <string name="select_your_payment_method1">Select your payment method</string>
    <string name="total_amount">Total amount</string>
    <string name="_107_76">$ 107.76</string>
    <string name="confirm_now">confirm now</string>
    <string name="confirm_now1">confirm now</string>
    <string name="birthday_card">BIRTHDAY CARD</string>
    <string name="celebrate_the_upcoming_arrival_with_love_and_joy_this_adorable_baby_shower_card_features_sweet_designs_and_heartfelt_wishes_making_it_the_perfect_keepsake_for_welcoming_a_precious_little_one">Celebrate the upcoming arrival with love and joy! This adorable baby shower card features sweet designs and heartfelt wishes, making it the perfect keepsake for welcoming a precious little one.</string>
    <string name="visit1">Visit</string>
    <string name="cards">CARDS</string>
    <string name="visit2">VISIT</string>
    <string name="wedding_card">WEDDING CARD</string>
    <string name="a_charming_spring_wedding_card_adorned_with_pastel_florals_and_soft_greenery_capturing_the_freshness_of_love_in_bloom_perfect_for_celebrating_new_beginnings_with_elegance_warmth_and_seasonal_beauty">A charming spring wedding card adorned with pastel florals and soft greenery, capturing the freshness of love in bloom. Perfect for celebrating new beginnings with elegance, warmth, and seasonal beauty.</string>
    <string name="cards2">CARDS</string>
    <string name="visit3">VISIT</string>
    <string name="creative_elegant_stylish_modern_unique_customizable_user_friendly_convenient_innovative_professional_personalized_premium_beautiful_simple_fast_reliable_attractive_easy_to_use_flexible_trendy_interactive_memorable_sophisticated_versatile_smart_secure_inspiring_artistic_dynamic_engaging">Creative, Elegant, Stylish, Modern, Unique, Customizable, User-friendly, Convenient, Innovative, Professional, Personalized, Premium, Beautiful, Simple, Fast, Reliable, Attractive, Easy-to-use, Flexible, Trendy, Interactive, Memorable, Sophisticated, Versatile, Smart, Secure, Inspiring, Artistic, Dynamic, Engaging.</string>
    <string name="who_did_you_choose_us">Who did you choose us?</string>
    <string name="user_friendly_convenient_and_innovative_interface_you_can_create_professional_premium_and_beautiful_designs_in_minutes">user-friendly, convenient, and innovative interface, you can create professional, premium, and beautiful designs in minutes.</string>
    <string name="next5">Next</string>
    <string name="edit_now">Edit now</string>
    <string name="sign_out">Sign out</string>
    <string name="next6">Next</string>
    <string name="welcome_to_this_joyful_christmas_season_may_your_days_be_filled_with_love_laughter_warmth_and_peace_let_s_celebrate_together_with_happiness_hope_and_kindness_in_our_hearts">✨ Welcome to this joyful Christmas season! May your days be filled with love, laughter, warmth, and peace. Let’s celebrate together with happiness, hope, and kindness in our hearts. 🎄</string>
    <string name="next7">Next</string>
    <string name="creative_elegant_easy_to_use_personalized_stylish_convenient">Creative, Elegant, Easy-to-use, Personalized, Stylish, Convenient .</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="discover_your_nitems">Discover Your\nItems</string>
    <string name="create_account">Create Account</string>
    <string name="create_an_account_so_you_can_nexplore_all">Create an account so you can\nexplore all</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="verification">Verification</string>
    <string name="we_will_send_you_a_one_time_notp_on_your_email">We will send you a One Time\nOTP on your email</string>
    <string name="enter_received_otp_code">Enter received OTP code</string>
    <string name="sign_in2">Sign in</string>
    <string name="creative_elegant_easy_to_use_personalized_stylish_convenien">Creative, Elegant, Easy-to-use, Personalized, Stylish, Convenien.</string>
</resources>